--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "budo index:bundle.js --dir public --live --pushstate -- -t sheetify",
+    "run:server": "nodemon gateway",
     "build": "mkdir -p dist && cp public/* dist/ && browserify index.js -o dist/bundle.js -t sheetify",
     "test": "standard --fix"
   },
@@ -19,13 +20,14 @@
     "choo": "^6.13.0",
     "hypercore": "^6.18.1",
     "multifeed": "^1.3.4",
-    "pull-stream": "^3.6.8",
+    "pump": "^3.0.0",
     "random-access-memory": "^3.0.0",
-    "stream-to-pull-stream": "^1.7.2"
+    "websocket-stream": "^5.1.2"
   },
   "devDependencies": {
     "budo": "^11.3.2",
     "choo-devtools": "^2.5.1",
+    "npm-run-all": "^4.1.3",
     "sheetify": "^7.3.3",
     "tachyons": "^4.11.1"
   }
